--- a/estilo/style.css
+++ b/estilo/style.css
@@ -32,7 +32,7 @@ body{
     font-family: var(--fonte-padrao);
 }
 main{
-    min-width: 250px;
+    max-width: 250px;
     max-width: 1000px;
     margin: auto;
     margin-top: 10px;
