--- a/estilo/style.css
+++ b/estilo/style.css
@@ -79,8 +79,9 @@ nav{
     background-color: var(--cor5);
     padding: 5px;
     margin: 0px;
-    
-    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
 }
 nav>a{
    
