--- a/estilo/style.css
+++ b/estilo/style.css
@@ -111,6 +111,7 @@ article > h2{
     color: var(--cor5);
     padding: 10px;
     background-image: linear-gradient(to right, var(--cor1), transparent);
+    border-radius: 5px 0px 0px 5px;
 }
 article>p{
     padding: 10px;
